--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!-- Developed by Syed Ghazi Raza - Full Stack Engineer @ AIgilityX - Arabia -->
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -12,6 +11,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <!-- This Website is Developed by Syed Ghazi Raza - Full Stack Engineer @ AIgilityX - Arabia -->
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -28,6 +28,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>AIgilityX™: Sovereign AI & Digital twins & Transformation Solutions</title>
+
   </head>
   <body>
     <script type="application/ld+json" src = "https://www.linkedin.com/in/syed-ghazi-raza-b9986225a/">
