--- a/public/index.html
+++ b/public/index.html
@@ -31,11 +31,11 @@
 
   </head>
   <body>
-    <script type="application/ld+json" src = "https://www.linkedin.com/in/syed-ghazi-raza-b9986225a/">
+    <!-- <script type="application/ld+json" src = "https://www.linkedin.com/in/syed-ghazi-raza-b9986225a/">
     {
       "@context": "https://schema.org",
       "@type": "WebSite",
-      "name": "AIgilityX Website,
+      "name": "AIgilityX Website",
       "developer": {
         "@type": "Person",
         "name": "Syed Ghazi Raza",
@@ -47,7 +47,7 @@
                 ]
       }
     }
-    </script>
+    </script> -->
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
